<resources>
    <string name="app_name">炫播</string>
    <string name="app_version">1.0.0</string>
    <string name="watch">主页</string>
    <string name="broadcasting">开播</string>
    <string name="message">消息</string>
    <string name="saved">已保存</string>
    <string name="unsave">未保存</string>
    <string name="group_setting_settotop">置顶聊天</string>
    <string name="group_setting_newsnotify">新消息通知</string>
    <string name="group_setting_savetitle">保存到通讯录</string>
    <string name="group_setting_exit">退出圈子</string>
    <string name="my_group">我的圈子</string>
    <string name="record_time_short">录音时间太短！</string>
    <string name="page_load_tipwhen">最近更新：%1$s</string>
    <string name="page_load_tipcount">共%1$d条信息，正在加载第%2$d-%3$d条信息！</string>
    <string name="page_load_tipcountOne">共%1$d条信息，正在加载第%2$d条信息！</string>
    <string name="chooser_contact_title">选择联系人</string>
    <string name="all_chooser_contact">全选</string>
    <string name="cancal_chooser_contact">取消</string>
    <string name="exit">退出</string>
    <string name="dialog_message">确定要退出吗？退出后您将无法及时的收到好友发过来的信息!</string>
    <string name="confirm">确定</string>
    <string name="bak">返回</string>
    <string name="stay">留在本页</string>
    <string name="low_memory">您手机内存不给力，请稍后重试</string>
    <string name="dialog_change_account_message">确定要使用其它账户进行登录吗？</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="username_or_mobile">用户名或手机号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="oldpwd">旧密码</string>
    <string name="newpwd">新密码</string>
    <string name="confirmpwd">确认密码</string>
    <string name="mobile">手机号码</string>
    <string name="email">个人邮箱</string>
    <string name="tag">个人标签</string>
    <string name="headpic">个人头像</string>
    <string name="verificode">验证码</string>
    <string name="colon">:</string>
    <string name="mobile_or_email_binded">已绑定的手机号码</string>
    <string name="login">登录</string>
    <string name="socket_exception">您的网络很不给力噢，请稍后再试。</string>
    <string name="findpwd">忘记密码？</string>
    <string name="login_thirdparty">其它方式登录</string>
    <string name="findpwd_title">忘记密码</string>
    <string name="findpwd_success">密码会以短信形式发送到您的手机上，请注意查收</string>
    <string name="register">注册</string>
    <string name="imregister">立即注册</string>
    <string name="bindemail">设置邮箱</string>
    <string name="bindheadpic">设置头像</string>
    <string name="sendverificode">发送验证码</string>
    <string name="mngselfinfo">个人信息设置</string>
    <string name="updpwd">更改密码</string>
    <string name="updmobile">更改手机</string>
    <string name="upd">更改</string>
    <string name="bind">绑定</string>
    <string name="addtag">添加标签</string>
    <string name="deltag">删除标签</string>
    <string name="selfinfo">账户信息</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="comment">提建议</string>
    <string name="changeaccount">切换账户</string>
    <string name="more">更多</string>
    <string name="my">我</string>
    <string name="location">位置</string>
    <string name="time">时间</string>
    <string name="plan">正常</string>
    <string name="invite">邀请好友</string>
    <string name="chat">发起聊天</string>
    <string name="invite_text">免费邀请小伙伴们和您一起玩转直播日记,获得奖励.</string>
    <string name="unknown_imreg_status">聊天</string>
    <string name="memo">提示</string>
    <string name="continuing">继续</string>
    <string name="cancel">取消</string>
    <string name="please_enter">请输入</string>
    <string name="fail">失败</string>
    <string name="success">成功</string>
    <string name="finish">完成</string>
    <string name="mobile_bindandupdate_2">验证码错误</string>
    <string name="newpwd_confirmpwd_noequal">确认密码与新密码不一致</string>
    <string name="tip_register_loading">正在注册中,请等待...</string>
    <string name="tip_login_loading">正在登录中,请等待...</string>
    <string name="tip_login_binding">正在绑定手机号码,请等待...</string>
    <string name="tip_send_sms">发送短信中,请等待...</string>
    <string name="username_memo">由英文字母、数字或下划线组成</string>
    <string name="password_memo">由6&#8211;20个英文字母，数字或符号组成</string>
    <string name="bind2_mobile_memo">验证码已下发到手机：</string>
    <string name="headpic_memo">点击左侧上传照片，会让您的朋友更容易辨认您</string>
    <string name="search_memo">姓名\\内部ID\\部门\\手机号</string>
    <string name="softname">炫播 v1.0</string>
    <string name="softname_1">软件名：</string>
    <string name="softver">v1.0</string>
    <string name="companyname">深圳炫播网络科技有限公司  版权所有</string>
    <string name="help_1">一、炫播</string>
    <string name="help_2">二、炫播</string>
    <string name="help_3">三、炫播</string>
    <string name="help_4">四、炫播</string>
    <string name="help_5">五、炫播</string>
    <string name="no_change">未修改</string>
    <string name="reupload_or_not">是否重传</string>
    <string name="im_loc_error">由于定位失效，位置分享失败，请稍后再试 !</string>
    <string name="locing">正在定位，请稍候!</string>
    <string name="exiting">正在退出...</string>
    <string name="str_length_not_more_than">长度不超过%s位</string>
    <string name="str_length_not_less_than">长度不少于%s位</string>
    <string name="str_format_error">格式错误</string>
    <string name="camera_gallery_dialog_title">请选择</string>
    <string name="camera">相机</string>
    <string name="camera2">摄像头</string>
    <string name="gallery">图册</string>
    <string name="clear_pic">清除图片</string>
    <string name="can_not_find_image_crop_app">未找到图片剪切工具,请编辑好图片后通过图册选择并上传</string>
    <string name="read_photo_fail">获取图片失败</string>
    <string name="read_photo_null">无图片</string>
    <string name="contacts_copy_time">最后备份时间</string>
    <string name="no_data">暂时还没有数据</string>
    <string name="no_search_data">查询结果为空</string>
    <string name="no_search_word">请输入关键词</string>
    <string name="bottom_bar_savetolocal">存到本地</string>
    <string name="bottom_bar_forward">转发</string>
    <string name="dialog_to_oncon">发消息</string>
    <string name="dialog_to_dial">打电话</string>
    <string name="dialog_to_sendmessage">发短信</string>
    <string name="dialog_to_sendemail">发邮件</string>
    <string name="dialog_to_seedetail">查看详情</string>
    <string name="contact_added">您已添加过该联系人</string>
    <string name="im_warning_network_error">无法连接到服务器</string>
    <string name="im_warning_network_check">请检查您的网络设置并点击重连</string>
    <string name="im_warning_network_check2">请检查您的网络设置</string>
    <string name="im_warning_network_reconnect">连接中</string>
    <string name="im_imageshow_error">获取图片失败</string>
    <string name="im_imageshow_save_failed">图片保存失败</string>
    <string name="im_imageshow_share_pic">分享图片</string>
    <string name="im_imageshow_share">分享</string>
    <string name="im_imageshow_not_surpport">设备不支持该功能</string>
    <string name="im_imageshow_pic_not_exist">图片文件不存在</string>
    <string name="im_message_comefrom_android">来自Android</string>
    <string name="im_message_comefrom_iphone">来自iPhone</string>
    <string name="im_message_comefrom_windows">来自Windows</string>
    <string name="im_message_comefrom_ipodtouch">来自iPod</string>
    <string name="im_message_comefrom_ipad">来自iPad</string>
    <string name="im_message_comefrom_mac">来自Mac</string>
    <string name="im_not_open">未开通直播日记，暂时无法邀请加入！短信通知他们开通</string>
    <string name="im_no_kick_right">没有踢人权限</string>
    <string name="im_no_upd_groupname_right">没有修改圈子名称权限</string>
    <string name="im_groupsetting">圈子设置</string>
    <string name="im_has_member_cant_exit">圈子还有成员，管理员不能退出圈子</string>
    <string name="im_exit_success">您已经成功退出当前圈子</string>
    <string name="im_exit_fail">退出圈子失败</string>
    <string name="im_cant_kick_admin">退出圈子失败</string>
    <string name="im_upd_grouname_success">设置圈子名称成功</string>
    <string name="im_upd_grouname_fail">设置圈子名称失败</string>
    <string name="im_images_saveto">图片保存至</string>
    <string name="im_groupname">圈子名称</string>
    <string name="im_set_head">设置头像</string>
    <string name="im_set_head_memo">您还没有设置头像！\n设置头像后，会让别人更好的认识您</string>
    <string name="send">发送</string>
    <string name="im_invite">邀请</string>
    <string name="look_up">查找</string>
    <string name="im_press2record">按下录音</string>
    <string name="im_press2record_end">松开 结束</string>
    <string name="im_press2record_cancel">松开手指，取消发送</string>
    <string name="im_start_groupchat">开始圈聊</string>
    <string name="network_disconnection">您的网络不稳定，请检查您的网络环境</string>
    <string name="download_prompt">提示：</string>
    <string name="download">下载</string>
    <string name="web_download_message">请点击确定下载</string>
    <string name="devices_error">设备不支持该功能</string>
    <string name="dialog_cancel">关闭</string>
	<string name="image">图片</string>
	<string name="mem_number">%1$s人</string>
	<string name="msg_sendstatus_toserver">送达</string>
	<string name="msg_sendstatus_partnoread">部分未读</string>
	<string name="msg_sendstatus_noread">%1$s人未读</string>
	<string name="msg_sendstatus_readed">已读</string>
	<string name="msg_sendstatus_resend">重发</string>
	<string name="msg_resend_content">是否重新发送?</string>
	<string name="delete">删除</string>
	<string name="record">录音</string>
	<string name="dyn_exp">表情</string>
	<string name="name_card">名片</string>
	<string name="image_text">图文</string>
	<string name="link_msg">链接</string>
	<string name="change_to_gsm">拨打手机号码</string>
	<string name="record_drag_tip">拖至此区域取消发送</string>
	<string name="record_time_unit">"秒/60秒"</string>
	<string name="login_country_code">"+86"</string>
	<string name="login_country_code2">"中国 +86"</string>
	<string name="country_code_select">"选择国家代码"</string>
	<string name="permission_no_invite">"您没有权限邀请好友！"</string>
	<string name="permission_no_add">"您没有权限添加好友！"</string>
	<string name="will_send_sms_invite">是否发送短信邀请?</string>
	<string name="login_input_pwdhint">请填写密码</string>
	<string name="login_input_phonehint">请输入手机号</string>
	<string name="contact_select_confirm">"确认(%1$d)"</string>
	<string name="group_modify_title">"修改圈子名称"</string>
	<string name="im_photo">照片</string>
	<string name="im_camera">拍摄</string>
	<string name="im_face">动态表情</string>
	<string name="voice">语音</string>
	<string name="find_pwd_numberempty">"手机号码不能为空！"</string>
	<string name="more_weibo_sharing">"分享中..."</string>
	<string name="more_weibo_sharefinish">"分享成功！"</string>
    <string name="new_msg_noti">新消息通知</string>
    <string name="set_top_chat">置顶聊天</string>
    <string name="msg_noti_sound">消息提示音</string>
    <string name="setting">设置</string>
    <string name="clear_all_msgs">清空聊天记录</string>
    <string name="group_info_name">圈子名称</string>
    <string name="group_info_memberNum">人数</string>
    <string name="group_info_kind">圈子分类</string>
    <string name="group_info_local">圈子地点</string>
    <string name="create_group_title">创建圈子</string>
    <string name="create_group_submit">完成创建</string>
    <string name="please_enter_verifycode">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="enter_verifycode">填写验证码</string>
    <string name="have_send">我们已发送</string>
    <string name="verifycode_sms">验证码短信</string>
    <string name="to_mobile">到这个号码</string>
    <string name="regain_verifycode">重新获取验证码</string>
    <string name="please_enter_groupname">请填写20字以内圈子名称(必填)</string>
    <string name="please_enter_groupsize">200人</string>
    <string name="please_enter_groupkind">请选择圈子分类</string>
    <string name="please_enter_grouploc">请选择圈子所在地点</string>
    <string name="function_introduction">功能介绍</string>
    <string name="offline_msg_notice">离线消息通知</string>
    <string name="sms_msg_notice">短信通知离线消息</string>
    <string name="email_msg_notice">邮件通知离线消息</string>
    <string name="sms_msg_notice_memo">若开启，当你有离线未收直播日记消息时，系统会向你发送短信提示有未收消息。</string>
    <string name="email_msg_notice_memo">若开启，当你有离线未收直播日记消息时，系统会向你发送邮件提示有未收消息。</string>
	<string name="disturb_msg_title">勿扰模式</string>
	<string name="disturb_msg_notice">开启后，在设定时间段内收到新消息时不会响铃或振动</string>
	<string name="disturb_msg_start_time">开始时间</string>
	<string name="disturb_msg_end_time">结束时间</string>
	<string name="license">炫播软件许可及服务协议</string>
</resources>