<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center" android:padding="20dp">
	<TextView android:id="@+id/dialog_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="yaoxm"
		android:paddingBottom="10dp"/>
	<Button android:id="@+id/dialog_dial"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:text="@string/dialog_to_dial"/>
	<Button android:id="@+id/dialog_message"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:text="@string/dialog_to_sendmessage"/>
	<Button android:id="@+id/dialog_email"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:text="@string/dialog_to_sendemail"/>
	<Button android:id="@+id/dialog_detail"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:text="@string/dialog_to_seedetail"/>
</LinearLayout>
