<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oncon="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayout"
    android:background="@color/gray" >
    
        <!-- 标题栏 -->

    <com.lz.oncon.widget.TitleView
        android:id="@+id/more_settingtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        oncon:centerValue="@string/offline_msg_notice"
        oncon:leftImageSrc="@drawable/ic_back" />

    <RelativeLayout
        style="@style/more_bg_middle"
        android:layout_marginTop="30dp" >

        <TextView
            style="@style/more_item_title"
            android:text="@string/sms_msg_notice" />

        <ImageView
            android:id="@+id/togglebutton_smsmsgnotice"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_switch" />
    </RelativeLayout>
    
    <TextView style="@style/more_bg_memo" android:text="@string/sms_msg_notice_memo"
        android:textColor="@android:color/black" android:layout_marginTop="5dp"/>
    
        <RelativeLayout
        style="@style/more_bg_middle"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/more_item_title"
            android:text="@string/email_msg_notice" />

        <ImageView
            android:id="@+id/togglebutton_emailmsgnotice"
            android:layout_width="wrap_content"
            android:onClick="onClick"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_switch" />
    </RelativeLayout>
    
    <TextView style="@style/more_bg_memo" android:text="@string/email_msg_notice_memo"
        android:textColor="@android:color/black" android:layout_marginTop="5dp"/>
    
    

</LinearLayout>