<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oncon="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayout"
    android:id="@+id/about_layout">

    <!-- 标题栏 -->

    <com.lz.oncon.widget.TitleView
        android:id="@id/title"
        style="@style/title"
        oncon:centerValue="@string/about"
        oncon:leftImageSrc="@drawable/ic_back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="114dp"
        android:layout_height="102dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/softname"
        style="@style/ts20_black_ww_wh"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
            android:layout_marginTop="40dp"
            android:text="@string/softname" />
    <RelativeLayout
        android:id="@+id/intro"
        style="@style/more_bg_bottom"
        android:layout_below="@id/softname"
        android:clickable="true"
        android:onClick="onClick" 
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="150dp" android:layout_height="40dp"
        android:padding="0dp"
        android:layout_centerHorizontal="true">

        <TextView
            style="@style/more_item_title"
            android:textSize="18dp"
            android:text="@string/function_introduction" />
        
    </RelativeLayout>
    
    <!-- 帮助 -->

    <RelativeLayout
        android:id="@+id/help"
        style="@style/more_bg_top"
        android:layout_below="@id/intro"
        android:clickable="true"
        android:onClick="onClick" 
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="150dp" android:layout_height="40dp"
        android:padding="0dp"
        android:layout_centerHorizontal="true">


        <TextView
            style="@style/more_item_title"
            android:textSize="18dp"
            android:text="@string/help_feedback" />
    </RelativeLayout>
    
    
    
    <RelativeLayout
        android:id="@+id/softs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp" >

        

        <TextView
            android:id="@+id/softver"
            style="@style/ts14_black_ww_wh"
            android:layout_centerHorizontal="true"
            android:text="@string/license"/>

        <TextView
            android:id="@+id/companyname"
            style="@style/ts16_black_ww_wh"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/softver"
            android:text="@string/companyname" />
    </RelativeLayout>

</RelativeLayout>